src/render/snapshots/agentbriefer__render__engine__tests__snapshot_of_rendered_copilot_instructions.snap
---
source: src/render/engine.rs
expression: output
---
# GitHub Copilot Instructions

> Generated by Agentbriefer CLI from `agentbriefer.yaml`. Edit the config and
> run `agentbriefer sync` to regenerate. GitHub Copilot reads this file from
> `.github/copilot-instructions.md` for repository-wide custom instructions.

## Developer Profile

- Style: `practical` — Balance speed and quality: reasonable defaults, light structure, pragmatic tradeoffs over textbook-perfect solutions.
- Explanation style: `tradeoff-based` — Focus explanations on the tradeoffs made: what was gained, what was given up, and why this option won.

## Project Profile

- Project type: `cli-tool` — A command-line tool. Prioritize clear help text, predictable exit codes, and scriptability over interactive polish.
- Language: `rust`
- Package manager: `cargo`
- Testing tools: `cargo-test`, `insta`
- Key dependencies: `serde`, `tokio`
- Security level: `strict` — Treat every change touching auth, validation, secrets, permissions, or data access as high-risk by default. Prefer stopping to ask over guessing when a security implication is unclear.
- Testing level: `practical` — Add tests for new logic and bug fixes when practical. Don't chase 100% coverage or test trivial code.
- Dependency policy: `explain-first` — A new dependency is fine, but explain why it's needed and what it replaces before adding it.
- Architecture style: `simple` — Prefer the flattest structure that works. Don't introduce layers, interfaces, or abstractions the codebase doesn't already have.


## Decision Loop

Before writing any code, work through these questions. Answering them is not
optional overhead — it is how over-engineering gets caught before it happens.

1. Is code actually needed for this request?
2. Can the problem be solved by explaining, configuring, or documenting instead?
3. Can existing code be reused?
4. Can the standard library or native platform feature solve this?
5. Is a new function really necessary?
6. Is a new abstraction really necessary?
7. Is a new dependency really necessary?
8. What is the smallest safe change?
9. Does the change and its explanation match the developer's configured style?
10. Does the change preserve security, validation, tests, and existing behavior?
11. Should you stop and ask before continuing?


## Workflow Loops

Match the loop to the task. Don't blend them — a bug fix shouldn't turn into
a refactor, and a refactor shouldn't sneak in a feature.

- **Feature Loop** — understand the request, check existing code, plan the
  smallest safe change, implement, verify, stop.
- **Bug Fix Loop** — find the root cause, avoid broad refactors, make the
  smallest fix, add a regression test when practical, verify.
- **Security Loop** — treat auth, validation, secrets, permissions, and
  database changes as high-risk. Preserve safety checks and explain the
  change clearly.
- **Refactor Loop** — only refactor when asked. Preserve behavior. Never mix
  refactor work with feature work.
- **Testing Loop** — add or update tests based on the configured testing
  level, and explain how to run them.
- **Documentation Loop** — update documentation only when setup, commands,
  environment variables, or behavior actually change.


## Stop Rules

- Stop before modifying CI/CD configuration
